work/openfaas/openfaas-ingressroute.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: openfaas-dashboard-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openfaas.web.bluehairfreak.com`)
      kind: Rule
      services:
        - name: gateway
          port: 8080
          namespace: openfaas
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: openfaas-dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`openfaas.web.bluehairfreak.com`)
      kind: Rule
      services:
        - name: gateway
          port: 8080
          namespace: openfaas
